<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_gravity="start"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back_arrow"
        android:scaleType="fitCenter"
        android:layout_marginBottom="16dp"
        app:tint="@color/darkGray" />

    <EditText
        android:id="@+id/taskNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        android:textSize="18sp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/taskDetailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_details"
        android:textSize="18sp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/taskStatusSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/status_array"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"/>
</LinearLayout>
